--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "format:html": "prettier --write \"**/*.html\""
   },
   "dependencies": {
+    "@prodbyeagle/grainient": "^3.2.0",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-separator": "^1.1.0",
